# miniray

./: .bazelrc  BUILD.bazel  WORKSPACE
python/: setup.py
python/ray/: BUILD.bazel  __init__.py  _ray.pyx  actor.py  ray.py  remote.py
src/ray/: ray.cc  ray.h  util.h
