load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_proto_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ray",
    srcs = ["src/ray/ray.cc"],
    hdrs = ["src/ray/ray.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
    ],
    copts = ["-Werror", "-Wall"]
)